--- a/.github/workflows/sync-with-upstream.yml
+++ b/.github/workflows/sync-with-upstream.yml
@@ -22,6 +22,11 @@ jobs:
           git remote add upstream https://github.com/facebook/rocksdb.git
           git fetch upstream
 
+      - name: Configure Git User
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions Bot"
+
       - name: Merge upstream changes
         run: |
           git checkout -b temp-merge-branch
